# cookiecutter-data-science

./: cookiecutter.json
{{cookiecutter.project_dir}}/: .coveragerc  .env  main.py  pyproject.toml
{{cookiecutter.project_dir}}/config/: arquivo.yaml  log_config.json
